--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
-.textcenter{
-    text-align: center;
-}
+
 h1{
     background-color: black;
     color: aliceblue;
-    
+    font-size: 50px;
+    border: 30px solid yellow;
+    text-align: center;
+}
+.backbigtitle{
+    background-color: yellow;
+    text-align: center;
+}
+.banner{
+    width: 100%; height: 158px;
+    object-fit: contain;
+    background-color: black;
 }
